--- a/RECIPE_EXAMPLE/example_recipe_oran_f_release.yaml
+++ b/RECIPE_EXAMPLE/example_recipe_oran_f_release.yaml
@@ -37,8 +37,8 @@ common:
 # ricip should be the ingress controller listening IP for the platform cluster
 # auxip should be the ingress controller listening IP for the AUX cluster
 extsvcplt:
-  ricip: "10.0.0.1"
-  auxip: "10.0.0.1"
+  ricip: ""
+  auxip: ""
 
 
 # Specify the docker registry credential using the following
