--- a/helm/3rdparty/influxdb/templates/ingress.yaml
+++ b/helm/3rdparty/influxdb/templates/ingress.yaml
@@ -14,7 +14,7 @@
 #   limitations under the License.                                             #
 ################################################################################
 {{- if .Values.ingress.enabled -}}
-apiVersion: networking.k8s.io/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: {{ include "common.fullname.influxdb" . }}
