--- a/helm/infrastructure/subcharts/kong/templates/ingress-admin.yaml
+++ b/helm/infrastructure/subcharts/kong/templates/ingress-admin.yaml
@@ -4,7 +4,7 @@
 {{- $path := .Values.admin.ingress.path -}}
 {{- $tls := .Values.admin.ingress.tls -}}
 {{- $hostname := .Values.admin.ingress.hostname -}}
-apiVersion: extensions/v1beta1
+apiVersion: extensions/v1
 kind: Ingress
 metadata:
   name: {{ template "kong.fullname" . }}-admin
