--- a/helm/infrastructure/subcharts/prometheus/templates/alertmanager-ingress.yaml
+++ b/helm/infrastructure/subcharts/prometheus/templates/alertmanager-ingress.yaml
@@ -3,10 +3,10 @@
 {{- $serviceName := include "prometheus.alertmanager.fullname" . }}
 {{- $servicePort := .Values.alertmanager.service.servicePort -}}
 {{- $extraPaths := .Values.alertmanager.ingress.extraPaths -}}
-{{- if .Capabilities.APIVersions.Has "networking.k8s.io/v1beta1" }}
-apiVersion: networking.k8s.io/v1beta1
+{{- if .Capabilities.APIVersions.Has "networking.k8s.io/v1" }}
+apiVersion: networking.k8s.io/v1
 {{ else }}
-apiVersion: extensions/v1beta1
+apiVersion: extensions/v1
 {{ end -}}
 kind: Ingress
 metadata:
