--- a/helm/infrastructure/subcharts/prometheus/templates/server-ingress.yaml
+++ b/helm/infrastructure/subcharts/prometheus/templates/server-ingress.yaml
@@ -4,10 +4,10 @@
 {{- $serviceName := include "prometheus.server.fullname" . }}
 {{- $servicePort := .Values.server.service.servicePort -}}
 {{- $extraPaths := .Values.server.ingress.extraPaths -}}
-{{- if .Capabilities.APIVersions.Has "networking.k8s.io/v1beta1" }}
-apiVersion: networking.k8s.io/v1beta1
+{{- if .Capabilities.APIVersions.Has "networking.k8s.io/v1" }}
+apiVersion: networking.k8s.io/v1
 {{ else }}
-apiVersion: extensions/v1beta1
+apiVersion: extensions/v1
 {{ end -}}
 kind: Ingress
 metadata:
